--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Controller
+                    Project final
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -444,20 +444,17 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/game.png"
+                    src="img/input.png"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
-                  </p>
-                  <button class="btn btn-primary" data-bs-dismiss="modal">
+                  <br />
+                  <button
+                    class="btn btn-primary"
+                    onclick="document.location = 'shoppingcart.html'"
+                  >
                     <i class="fas fa-xmark fa-fw"></i>
-                    Close Window
+                    click!
                   </button>
                 </div>
               </div>
